--- a/learn_JS_43-___ fetch/package.json
+++ b/learn_JS_43-___ fetch/package.json
@@ -1,6 +1,7 @@
 {
   "name": "learn_js_43-___-fetch",
   "version": "1.0.0",
+  "description": "",
   "main": "gulpfile.js",
   "directories": {
     "doc": "doc"
@@ -12,7 +13,5 @@
   "license": "ISC",
   "devDependencies": {
     "json-server": "^0.16.3"
-  },
-  "dependencies": {},
-  "description": ""
+  }
 }
